--- a/coreCRM/src/main/resources/application.yaml
+++ b/coreCRM/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ liquibase:
 jpa:
   generate-ddl: true
   hibernate:
-    ddl-auto: create
+    ddl-auto: update
   properties:
     hibernate:
       format_sql: true
