--- a/contentLoaderAdapter/src/main/resources/application.yml
+++ b/contentLoaderAdapter/src/main/resources/application.yml
@@ -6,12 +6,8 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    consumer:
-      group-id: kafka-example-group
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring.json.trusted.packages: '*'
     template:
       default-topic: ${KF_TOPIC}
+
+server:
+  port: 8080
